--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>My first website</h1>
-  </body>
+  <main>
+    <header>
+      <a href="#">Contact</a>
+      <a href="#">Biography</a>
+    </header>
+    <h1>Frank Schaeske</h1>
+  </main>
 </html>
