--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <main>
@@ -11,6 +12,23 @@
       <a href="#">Contact</a>
       <a href="#">Biography</a>
     </header>
-    <h1>Frank Schaeske</h1>
+    <body>
+      <h1>Frank Schaeske</h1>
+      <figure>
+        <img source="Foto.jpg" alt="Photo of Frank Schaeske" />
+        <figcaption>Photo of Frank Schaeske</figcaption>
+      </figure>
+      <section>
+        <h2>Contact</h2>
+        <p>Phone number: 123456 E-Mail: john.doe@web.de</p>
+      </section>
+      <section>
+        <h2>Biography</h2>
+        <p>
+          My name is Frank Schaeske and I just started the Web Development
+          Bootcamp
+        </p>
+      </section>
+    </body>
   </main>
 </html>
