--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <main>
     <header>
-      <a href="#">Contact</a>
-      <a href="#">Biography</a>
+      <a href="#Contact">Contact</a>
+      <a href="#Biography">Biography</a>
     </header>
     <body>
       <h1>Frank Schaeske</h1>
@@ -18,11 +18,11 @@
         <img source="Foto.jpg" alt="Photo of Frank Schaeske" />
         <figcaption>Photo of Frank Schaeske</figcaption>
       </figure>
-      <section>
+      <section id="Contact">
         <h2>Contact</h2>
         <p>Phone number: 123456 E-Mail: john.doe@web.de</p>
       </section>
-      <section>
+      <section id="Biography">
         <h2>Biography</h2>
         <p>
           My name is Frank Schaeske and I just started the Web Development
