--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
       <h1>Frank Schaeske</h1>
       <figure>
-        <img source="Foto.jpg" alt="Photo of Frank Schaeske" />
+        <img src="Foto.jpg" alt="Photo of Frank Schaeske" />
         <figcaption>Photo of Frank Schaeske</figcaption>
       </figure>
       <section id="Contact">
