--- a/index.html
+++ b/index.html
@@ -5,22 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Personal website of Frank Schaeske</title>
   </head>
   <main>
     <header>
-      <a href="#Contact">Contact</a>
-      <a href="#Biography">Biography</a>
+      <nav>
+        <a href="#Contact">Contact</a>
+        <a href="#Biography">Biography</a>
+      </nav>
     </header>
     <body>
       <h1>Frank Schaeske</h1>
       <figure>
-        <img src="Foto.jpg" alt="Photo of Frank Schaeske" />
+        <img class="photo" src="Foto.jpg" alt="Photo of Frank Schaeske" />
         <figcaption>Photo of Frank Schaeske</figcaption>
       </figure>
       <section id="Contact">
         <h2>Contact</h2>
-        <p>Phone number: 123456 E-Mail: john.doe@web.de</p>
+        <section>
+          <p>Phone number: 123456</p>
+          <p>E-Mail: john.doe@web.de</p>
+        </section>
+      </section>
+      <section>
+        <figure>
+          <img src="#" alt="GitHub Logo" />
+          <figcaption>GitHub</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="Codepen Logo" />
+          <figcaption>Codepen</figcaption>
+        </figure>
+        <figure>
+          <img src="#" alt="LinkedIn Logo" />
+          <figcaption>LinkedIn</figcaption>
+        </figure>
       </section>
       <section id="Biography">
         <h2>Biography</h2>
@@ -28,6 +47,10 @@
           My name is Frank Schaeske and I just started the Web Development
           Bootcamp
         </p>
+        <h2>Curriculum Vitae</h2>
+        <p>Job 1</p>
+        <p>Job 2</p>
+        <p>Job 3</p>
       </section>
     </body>
   </main>
